<resources>
    <string name="app_name">RPG Dice Roller</string>
    <string name="history_subtitle">See how you have been rolling!</string>
    <string name="simple_roller_subtitle">Tap die icons to roll!</string>
    <string name="custom_roller_subtitle">Create a custom roll! </string>
    <string name="saved_rolls_subtitle">Tap items to roll!</string>
    <string name="tab_text_1">History</string>
    <string name="tab_text_2">Simple Roll</string>
    <string name="tab_text_3">Custom Roll</string>
    <string name="tab_text_4">Saved Rolls</string>
    <string name="action_settings">Settings</string>
    <string name="feedback">Feedback</string>
    <string name="thanks_for_support">Thanks for supporting the app!\nIt means a lot\n\nEverything is already unlocked without paying</string>
    <string name="support_the_app">Support The App</string>
    <string name="do_something">Do Something</string>
    <string name="edit_die_fab_text">Create a die</string>
    <string name="simple_die_fab_text">Simple</string>
    <string name="min_max_die_fab_text">Min/Max</string>
    <string name="imbalanced_die_fab_text">Imbalanced</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="temp">temp</string>
    <string name="clear_history">Clear History</string>
    <string name="shake_to_roll">Shake!</string>
    <string name="hold_still">Hold Still</string>
    <string name="roll">Roll</string>
    <string name="existing_category">Existing Category</string>
    <string name="save">Save</string>
    <string name="add_die">Add Die</string>
    <string name="roll_again">Roll Again</string>
    <string name="exit">Exit</string>
    <string name="shake_sensitivity">Shake Sensitivity</string>
    <string name="shake_duration">Shake Duration</string>
    <string name="hold_duration">Hold Duration</string>
    <string name="about">About</string>
    <string name="name">Name</string>
    <string name="category">Category</string>
    <string name="number">Number</string>
    <string name="numbers">Numbers</string>
    <string name="die">Die</string>
    <string name="faces">Faces</string>
    <string name="minimum">Minimum</string>
    <string name="maximum">Maximum</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="natural_single">N</string>
    <string name="advantage_single">A</string>
    <string name="disadvantage_single">D</string>
    <string name="natural_short">Nat</string>
    <string name="advantage_short">Adv</string>
    <string name="disadvantage_short">Dis</string>
    <string name="natural">Natural</string>
    <string name="advantage">Advantage</string>
    <string name="disadvantage">Disadvantage</string>
    <string name="drop_high_low">Drop Highest/Lowest</string>
    <string name="drop_highest">Drop Highest</string>
    <string name="drop_lowest">Drop Lowest</string>
    <string name="keep_highest">Keep Highest</string>
    <string name="keep_lowest">Keep Lowest</string>
    <string name="re_roll_dice">Re-Roll Dice</string>
    <string name="minimum_die_value">Minimum Die Value</string>
    <string name="explode">Explode</string>
    <string name="tap_to_remove">Tap To Remove</string>
    <string name="add_roll_property">Add Property</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="edit">Edit</string>
    <string name="change_category">Change Category</string>
    <string name="decrement_button">Decrement Button</string>
    <string name="increment_button">Increment Button</string>
    <string name="dice_roll_background">Dice Roll Background</string>
    <string name="dice_display_image">Dice Display Image</string>
    <string name="no_thanks">No, Thanks</string>

    <string name="first_open_dialog_title">Welcome to the app!</string>
    <string name="first_open_dialog_text">"Thanks for checking out my app\n"
        "- Click on the dice icons to roll\n"
        "- Change the number of dice and modifier at bottom of screen\n"
        "- Check out the settings in the top right for more features"
    </string>

    <string name="no_saved_rolls">No saved rolls have been created.\nGo to the Custom Roll tab and save a roll for it to appear here.</string>
    <string name="no_die_in_roll">No dice are in the roll.\nAdd a roll by clicking the button below.</string>
    <string name="no_history">No history yet.\nRoll some dice to fill tab out.</string>
    <string name="restore_history">Restore Cleared History</string>

    <string name="rate_this_app">Rate this app</string>
    <string name="rate_this_app_dialog_text">If you enjoy using this app, please take a moment to rate it.\n\nThanks for
        your support!\n(This dialog will never show up again)
    </string>

    <string name="developed_by_weston_fiala">Developed by Weston Fiala</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Header Preferences -->
    <string name="shake_category_key">ShakeCategoryKey</string>
    <string name="shake_category_title">Shake</string>

    <string name="general_category_key">GeneralCategoryKey</string>
    <string name="general_category_title">General</string>

    <string name="advanced_category_key">AdvancedCategoryKey</string>
    <string name="advanced_category_title">Advanced</string>

    <string name="dice_category_key">DiceCategoryKey</string>
    <string name="dice_category_title">Dice</string>

    <string name="header_preference_key">HeaderPreferenceKey</string>
    <string name="header_preference_title">Header</string>
    <string name="header_preference_fragment">HeaderFragment</string>

    <string name="items_per_row_preference_key">ItemsPerRowKey</string>
    <string name="items_per_row_preference_title">Items Per Row</string>

    <string name="sound_preference_key">SoundPreferenceKey</string>
    <string name="sound_preference_title">Sound</string>
    <string name="sound_preference_fragment">SoundFragment</string>

    <string name="shake_preference_key">ShakePreferenceKey</string>
    <string name="shake_preference_title">Shake</string>
    <string name="shake_preference_fragment">ShakeFragment</string>

    <!-- Shake Preferences -->
    <string name="sensitivity_title">Sensitivity</string>

    <string name="shake_enabled_key">ShakeToRollKey</string>
    <string name="shake_enabled_title">Shake To Roll</string>

    <string name="shake_sensitivity_key">ShakeSensitivityKey</string>
    <string name="shake_sensitivity_title">Shake Sensitivity</string>

    <string name="shake_duration_key">ShakeDurationKey</string>
    <string name="shake_duration_title">Shake Duration</string>

    <string name="hold_duration_key">HoldDurationKey</string>
    <string name="hold_duration_title">Hold Duration</string>

    <!-- Sound Preferences -->
    <string name="sound_title">Sound</string>

    <string name="shake_sound_enabled_key">SoundEnabledKey</string>
    <string name="shake_sound_enabled_title">Shake Sounds</string>

    <string name="critical_roll_sound_key">CriticalRollSoundKey</string>
    <string name="critical_roll_sound_title">Critical Sounds</string>

    <string name="sound_volume_key">SoundVolumeKey</string>
    <string name="sound_volume_title">Volume</string>

    <!-- Sort Preferences -->
    <string name="sort_item_natural">Natural</string>
    <string name="sort_item_ascending">Ascending</string>
    <string name="sort_item_descending">Descending</string>

    <string name="sort_type_key">SortTypeKey</string>
    <string name="sort_type_title">Sort Type</string>

    <!-- Show Average Preferences -->
    <string name="show_dice_roll_average_enable_key">ShowDiceRollAverageEnableKey</string>
    <string name="show_dice_roll_average_enable_title">Show Roll Expected Result</string>

    <!-- Enable Roll Properties Preferences -->
    <string name="roll_properties_enable_key">RollPropertiesKey</string>
    <string name="roll_properties_enable_title">Roll Properties</string>

    <!-- Dice Edit Preferences -->
    <string name="dice_edit_enabled_key">DiceEditEnabledKey</string>
    <string name="dice_edit_enabled_title">Dice Editing</string>

    <string name="dice_pool_key">DicePoolKey</string>
    <string name="dice_pool_title">Dice Pool</string>

    <string name="error_dice_pool_key">ErrorDicePoolKey</string>
    <string name="error_dice_pool_title">Dice Pool Error</string>

    <string name="saved_roll_pool_key">SavedRollPoolKey</string>
    <string name="saved_roll_pool_title">Saved Rolls Pool</string>

    <string name="error_saved_roll_pool_key">Error SavedRollPoolKey</string>
    <string name="error_saved_roll_pool_title">Saved Rolls Pool Error</string>

    <!-- Keep Screen On Preferences -->
    <string name="keep_screen_on_key">KeepScreenOnKey</string>
    <string name="keep_screen_on_title">Keep Screen On</string>

    <!-- Die Theme Preferences -->
    <string name="die_theme_key">DieThemeKey</string>
    <string name="die_theme_title">Die Theme</string>
    <string name="die_theme_fragment">DieThemeFragment</string>

    <string name="no_theme">Unset</string>

    <!-- Basic Theme -->
    <string name="basic_die_theme_key">BasicDieThemeKey</string>
    <string name="basic_die_theme_title">Basic</string>

    <string name="white_theme">White</string>
    <string name="fire_theme">Fire</string>
    <string name="forest_theme">Forest</string>
    <string name="beach_theme">Beach</string>
    <string name="rgb_theme">RGB</string>

    <!-- Metallic Themes -->
    <string name="metallic_die_theme_key">MetallicDieThemeKey</string>
    <string name="metallic_die_theme_title">Metallic</string>

    <string name="gold_theme">Gold</string>
    <string name="steel_theme">Steel</string>

    <!-- Ice Cream Themes -->
    <string name="ice_cream_die_theme_key">IceCreamDieThemeKey</string>
    <string name="ice_cream_die_theme_title">Ice Cream</string>

    <string name="creamsicle_theme">Creamsicle</string>
    <string name="mint_chocolate_theme">Mint Chocolate</string>
    <string name="rainbow_sherbert_theme">Rainbow Sherbert</string>
    <string name="superman_theme">Superman</string>

    <!-- New Dice Preferences -->
    <string name="possible_fate_die_encounter_key">PossibleFateDieEncounterKey</string>
</resources>
