<menu xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:title="@string/clear_history" android:id="@+id/clearHistory" app:showAsAction="ifRoom"
          android:icon="@drawable/ic_clear_history"/>
    <item android:id="@+id/settings_item"
          android:title="@string/action_settings"
          app:showAsAction="never"/>
    <group
            android:checkableBehavior="all">
        <item
                android:id="@+id/shakeMenuItem"
                android:title="@string/shake_category_title"
                app:showAsAction="never"
        />
        <item
                android:id="@+id/soundMenuItem"
                android:title="@string/shake_sound_enabled_title"
                app:showAsAction="never" />
        <item
                android:title="@string/critical_roll_sound_title"
                app:showAsAction="never"
                android:id="@+id/critSoundItem"
        />
    </group>
    <item android:title="@string/about" android:id="@+id/aboutItem" app:showAsAction="never"/>
    <item android:title="@string/rate_this_app" android:id="@+id/rateThisApp" app:showAsAction="never"/>
    <item android:title="@string/feedback" android:id="@+id/feedback" app:showAsAction="never"/>
    <item android:title="@string/support_the_app" android:id="@+id/support_the_app" app:showAsAction="never"/>
</menu>
