<!--
  ~ Copyright 2018 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.preference.PreferenceScreen
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreference
            app:key="@string/shake_enabled_key"
            app:title="@string/shake_enabled_title"
            app:defaultValue="true"
    />

    <SeekBarPreference
            app:key="@string/shake_sensitivity_key"
            app:title="@string/shake_sensitivity_title"
            app:dependency="@string/shake_enabled_key"
            app:defaultValue="50"
        />

    <SeekBarPreference
            app:key="@string/shake_duration_key"
            app:title="@string/shake_duration_title"
            app:dependency="@string/shake_enabled_key"
            app:defaultValue="50"
    />

    <SeekBarPreference
            app:key="@string/hold_duration_key"
            app:title="@string/hold_duration_title"
            app:dependency="@string/shake_enabled_key"
            app:defaultValue="50"
    />

</androidx.preference.PreferenceScreen>
