<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:orientation="vertical"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="wrap_content"
                                                   android:id="@+id/customDieEditBackground" android:padding="8dp"
                                                   android:paddingStart="8dp" android:paddingLeft="8dp"
                                                   android:paddingTop="8dp" android:paddingEnd="8dp"
                                                   android:paddingRight="8dp">

    <TextView
            android:text="@string/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nameText"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/nameEditId"
            app:layout_constraintBottom_toBottomOf="@+id/nameEditId" app:layout_constraintTop_toTopOf="@+id/nameEditId"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/background_light"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textShortMessage"
            android:text="@string/temp"
            android:id="@+id/nameEditId"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/nameText"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/minEditId"
            android:singleLine="true" android:importantForAutofill="no"/>
    <TextView
            android:text="@string/minimum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/minEditId" android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="@+id/minEditId" app:layout_constraintBottom_toBottomOf="@+id/minEditId"
            android:textColor="@android:color/background_light"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
    <TextView
            android:text="@string/maximum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/background_light" app:layout_constraintEnd_toStartOf="@+id/maxEditId"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/maxEditId" app:layout_constraintBottom_toBottomOf="@+id/maxEditId"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:id="@+id/minEditId" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/nameEditId" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/maxEditId" android:singleLine="true"
            android:importantForAutofill="no"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:id="@+id/maxEditId" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/minEditId"
            app:layout_constraintBottom_toBottomOf="parent" android:singleLine="true" android:importantForAutofill="no"/>
</androidx.constraintlayout.widget.ConstraintLayout>