<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="wrap_content" android:id="@+id/background"
                                                   android:padding="8dp" android:paddingStart="8dp"
                                                   android:paddingLeft="8dp" android:paddingTop="8dp"
                                                   android:paddingEnd="8dp" android:paddingRight="8dp"
                                                   android:paddingBottom="8dp">

    <TextView
            android:text="@string/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nameText"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/background_light"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/nameEditId"
            app:layout_constraintTop_toTopOf="@+id/nameEditId"
            app:layout_constraintBottom_toBottomOf="@+id/nameEditId" android:layout_marginEnd="8dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textShortMessage"
            android:text="@string/temp"
            android:id="@+id/nameEditId"
            android:singleLine="true"
            android:labelFor="@id/nameText"
            android:hint="@string/name" android:autofillHints="" tools:targetApi="o"
            app:layout_constraintStart_toEndOf="@+id/nameText"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/numbersEditID"/>
    <TextView
            android:text="@string/faces"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/numbersText"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/background_light"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/numbersEditID"
            app:layout_constraintTop_toTopOf="@+id/numbersEditID"
            app:layout_constraintBottom_toBottomOf="@+id/numbersEditID" android:layout_marginEnd="8dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/numbersEditID"
            android:singleLine="true"
            android:labelFor="@id/numbersText"
            android:autofillHints="" tools:targetApi="o" app:layout_constraintStart_toEndOf="@+id/numbersText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/nameEditId"
            app:layout_constraintBottom_toBottomOf="parent" android:inputType="number"
            android:digits='"0123456789,-"'/>
</androidx.constraintlayout.widget.ConstraintLayout>