<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:padding="4dp" android:paddingStart="4dp"
              android:paddingLeft="4dp" android:paddingTop="4dp"
              android:paddingEnd="4dp" android:paddingRight="4dp"
              android:paddingBottom="4dp"
              android:id="@+id/customDieHolder" android:orientation="vertical" android:gravity="center"
              android:baselineAligned="false">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp" android:baselineAligned="false" android:gravity="center"
            android:layout_weight="1">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="match_parent" android:gravity="center"
                android:id="@+id/linearLayout2" android:layout_weight="1">
            <ImageButton
                    android:layout_width="0dp"
                    android:layout_height="0dp" app:srcCompat="@drawable/ic_up_arrow"
                    android:id="@+id/moveDieUpButton" android:adjustViewBounds="true"
                    android:scaleType="fitCenter" android:contentDescription="@string/increment_button"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/removeDieButton"
                    app:layout_constraintBottom_toTopOf="@+id/removeDieButton"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintDimensionRatio="1:1"/>

            <ImageButton
                    android:id="@+id/removeDieButton"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/temp"
                    android:scaleType="fitCenter"
                    app:layout_constraintBottom_toTopOf="@+id/moveDieDownButton"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintEnd_toEndOf="@+id/moveDieDownButton"
                    app:layout_constraintStart_toStartOf="@+id/moveDieDownButton"
                    app:layout_constraintTop_toBottomOf="@+id/moveDieUpButton"
                    app:srcCompat="@drawable/ic_cancel" />
            <ImageButton
                    android:layout_width="0dp"
                    android:layout_height="0dp" app:srcCompat="@drawable/ic_down_arrow"
                    android:id="@+id/moveDieDownButton" android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:contentDescription="@string/decrement_button"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/removeDieButton"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintDimensionRatio="1:1"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <include android:layout_width="0dp" android:layout_height="match_parent"
                 android:id="@+id/simpleDieInclude"
                 tools:layout_conversion_absoluteHeight="0dp"
                 tools:layout_conversion_absoluteWidth="0dp" app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                 layout="@layout/holder_simple_die" android:layout_weight="2"/>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent" android:layout_weight="4" android:gravity="center"
                android:baselineAligned="false">
            <include android:layout_width="match_parent" android:layout_height="0dp"
                     layout="@layout/layout_up_down_buttons"
                     android:id="@+id/diceUpDownButtonsInclude"
                     tools:layout_conversion_absoluteHeight="0dp" tools:layout_editor_absoluteY="0dp"
                     tools:layout_editor_absoluteX="0dp" tools:layout_conversion_absoluteWidth="0dp"
                     android:layout_weight="1"/>
            <include android:layout_width="match_parent" android:layout_height="0dp"
                     layout="@layout/layout_up_down_buttons"
                     android:id="@+id/modifierUpDownButtonsInclude"
                     tools:layout_conversion_absoluteHeight="0dp" tools:layout_editor_absoluteY="0dp"
                     tools:layout_editor_absoluteX="0dp" tools:layout_conversion_absoluteWidth="0dp"
                     android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:gravity="center" android:baselineAligned="false"
    >
        <Button
                android:text="@string/add_roll_property"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/addCustomPropertyButton"
                android:layout_weight="1"/>
        <Button
                android:text="@string/temp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/currentCustomPropertiesButton"
                android:layout_weight="1"/>
    </LinearLayout>
    <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
    />
</LinearLayout>