<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Settings" android:id="@+id/constraintLayout">

    <androidx.appcompat.widget.Toolbar
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:theme="?attr/actionBarTheme"
            android:minHeight="?attr/actionBarSize"
            android:id="@+id/settingsToolbar" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:title="@string/action_settings"/>
    <Switch
            android:text="@string/shake_to_roll"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/shakeToRollSwitch"
            android:textAlignment="textStart" android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/settingsToolbar" android:layout_marginTop="16dp"
    />
    <View
            android:id="@+id/divider3"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            android:paddingTop="8dp" android:paddingEnd="8dp" android:paddingLeft="8dp" android:paddingStart="8dp"
            android:padding="8dp" android:paddingBottom="8dp" android:paddingRight="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shakeToRollSwitch"
            android:layout_marginTop="16dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="507dp"
            app:layout_constraintTop_toBottomOf="@+id/divider3" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/shakeSettingsGroup">

        <TextView
                android:text="@string/shake_sensitivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/shakeSensitivityText"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:layout_marginStart="16dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent"/>
        <SeekBar
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:max="8"
                android:progress="4"
                android:id="@+id/shakeSensitivityBar"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/shakeSensitivityText" android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"/>
        <View
                android:id="@+id/divider4"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/shakeSensitivityBar"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
        <TextView
                android:text="@string/shake_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/shakeDurationText"
                app:layout_constraintTop_toBottomOf="@+id/divider4" android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                app:layout_constraintHorizontal_bias="0.0"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
        <SeekBar
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:max="8"
                android:progress="4"
                android:id="@+id/shakeDurationBar" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/shakeDurationText" android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"/>
        <View
                android:id="@+id/divider5"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintTop_toBottomOf="@+id/shakeDurationBar"
                android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"/>
        <TextView
                android:text="@string/hold_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/holdDurationText"
                app:layout_constraintTop_toBottomOf="@+id/divider5" android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                app:layout_constraintHorizontal_bias="0.0"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
        <SeekBar
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:max="8"
                android:progress="4"
                android:id="@+id/holdDurationBar" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/holdDurationText" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"/>
        <View
                android:id="@+id/divider6"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/holdDurationBar" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>